--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-	"name": "KEEP GAMBLING",
+	"name": "KEEP_GAMBLING",
 	"version_number": "1.0.0",
 	"website_url": "https://github.com/SmoothSpatula/SmoothSpatula-KeepGambling",
 	"description": "Shrines do not break after giving out items. You can keep spending.",
